--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>KRISH RAJ</title>
+    <style>
+
+body {background-color: #66bfbf;}
+
+img {height: 200px;}
+
+</style>
   </head>
   <body>
     <table cellspacing="20">
